stuff from the 2nd semester same as the submitted project directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,9 @@ add_subdirectory(Backend)
 # App
 #   - input
 #   - output
-#   - saved 
+#   - saved
 #   - frontEnd
-#       - lib 
+#       - lib
 #           - AbsoluteLayout
 #           - beansbinding
 #           - xchart
@@ -54,6 +54,8 @@ INSTALL(FILES ${lib_jar_PATH}/absolutelayout/AbsoluteLayout.jar DESTINATION ${fr
 INSTALL(FILES ${lib_jar_PATH}/beans-binding/beansbinding-1.2.1.jar DESTINATION ${frontEnd_lib_dest_PATH})
 INSTALL(FILES ${lib_jar_PATH}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar DESTINATION ${frontEnd_lib_dest_PATH})
 INSTALL(FILES ${lib_jar_PATH}/xchart-2.5.0.jar DESTINATION ${frontEnd_lib_dest_PATH})
+INSTALL(FILES ${lib_jar_PATH}/xchart-3.5.0.jar DESTINATION ${frontEnd_lib_dest_PATH})
+INSTALL(FILES ${lib_jar_PATH}/xchart-demo-3.5.0.jar DESTINATION ${frontEnd_lib_dest_PATH})
 INSTALL(FILES ${lib_jar_PATH}/avalon-framework-4.2.0.jar DESTINATION ${frontEnd_lib_dest_PATH})
 INSTALL(FILES ${lib_jar_PATH}/batik-all-1.7.jar DESTINATION ${frontEnd_lib_dest_PATH})
 INSTALL(FILES ${lib_jar_PATH}/commons-io-1.3.1.jar DESTINATION ${frontEnd_lib_dest_PATH})
@@ -66,55 +68,55 @@ INSTALL(FILES ${lib_jar_PATH}/xml-apis-1.3.04.jar DESTINATION ${frontEnd_lib_des
 INSTALL(FILES ${lib_jar_PATH}/xmlgraphics-commons-1.5.jar DESTINATION ${frontEnd_lib_dest_PATH})
 INSTALL(FILES ${lib_jar_PATH}/xml-apis-ext-1.3.04.jar DESTINATION ${frontEnd_lib_dest_PATH})
 
-# Copy AlgoBench_GUI.jar and AlgoBench_Backend 
+# Copy AlgoBench_GUI.jar and AlgoBench_Backend
 # Path of AlgoBench_GUI => build/Frontend/src/
 # Path of AlgoBench_Backend => build/Backend/
 INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/build/Frontend/src/AlgoBench_GUI.jar DESTINATION ${App_PATH}/frontEnd/)
 
 if(WIN32 OR WIN64)
-	INSTALL(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/build/Backend/Algobench_Backend.exe 
+	INSTALL(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/build/Backend/Algobench_Backend.exe
      	   DESTINATION ${App_PATH}/backEnd/
     	)
 
-    	
+
     #install xslt file
     INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/Frontend/src/xml/xslt/task.xsl
             DESTINATION ${App_PATH}/xml/xslt/
         )
-        
+
     INSTALL(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/Frontend/AlgoBench.exe
      	   DESTINATION ${App_PATH}/
     	)
 elseif(APPLE)
-	INSTALL(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/build/Backend/Algobench_Backend 
+	INSTALL(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/build/Backend/Algobench_Backend
     	    DESTINATION ${App_PATH}/backEnd/
     	)
-    
-    
+
+
     #install xslt file
     INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/Frontend/src/xml/xslt/task.xsl
             DESTINATION ${App_PATH}/xml/xslt/
         )
-        
-	# install AlgoBench.command 
+
+	# install AlgoBench.command
 	INSTALL(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/Frontend/AlgoBench.command
     	    DESTINATION ${App_PATH}/
     	)
 elseif(UNIX)
-	INSTALL(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/build/Backend/Algobench_Backend 
+	INSTALL(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/build/Backend/Algobench_Backend
     	    DESTINATION ${App_PATH}/backEnd/
     	)
-    	
+
     #install xslt file
     INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/Frontend/src/xml/xslt/task.xsl
             DESTINATION ${App_PATH}/xml/xslt/
         )
-    
-	# install AlgoBench.desktop 
+
+	# install AlgoBench.desktop
 	INSTALL(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/Frontend/AlgoBench.desktop
     	    DESTINATION "~/.local/share/applications"
     	)
-	# install AlgoBench.desktop 
+	# install AlgoBench.desktop
 	INSTALL(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/Frontend/AlgoBench.desktop
     	    DESTINATION ${App_PATH}
     	)
